feat(auth): Добавлены авторизация и аутентификация
