# api/models/users.go
@@ -1,0 +1,14 @@
+package models
+
+type Role struct {
+	ID          int    `json:"id"`
+	Name        string `json:"name"`
+	Description string `json:"description,omitempty"`
+}
+
+type User struct {
+	ID           int    `json:"id"`
+	Username     string `json:"username"`
+	PasswordHash string `json:"-"` // не возвращаем хеш в JSON
+	Roles        []Role `json:"roles,omitempty"`
+}
